[tool.poetry]
name = "kernel-program-api"
version = "0.1.0"
description = "kernel_program"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [ { include = "kernel_program", from = "." },]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
python-dotenv = "^1.0.0"
flask-cors = "^4.0.0"
jupyter-client = "^8.3.0"
snakemq = "^1.6"
ipykernel = "^6.24.0"
requests = "^2.31.0"

[tool.poetry.scripts]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"


[build-system]
build-backend = "setuptools.build_meta:__legacy__"
